<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp">

    <ImageView
        android:id="@+id/RepoAvatar_recycler"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/repoName_recycler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/name"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/repoVisibility_recycler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visibility"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/repoPrivateOrPublic_recycler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/private_or_public"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>